<resources>
    <string name="app_name">GreatInternetOfThings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_columnar_chart">Columnar</string>
    <string name="menu_linear_chart">Linear</string>
    <string name="menu_pie_chart">Pie</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_communicate">联系我们</string>
    <string name="menu_check_update">检查更新</string>
</resources>
